cloudtower-api-doc/markdown/zh/v1.9.0/schemas/EverouteClusterWhereInput.md
| parameter | Type | Description |
| ----------- | ----------- |----------- |
| agent_elf_clusters_every  |  object  |    |
| agent_elf_clusters_none  |  object  |    |
| agent_elf_clusters_some  |  object  |    |
| agent_elf_vdses_every  |  object  |    |
| agent_elf_vdses_none  |  object  |    |
| agent_elf_vdses_some  |  object  |    |
| AND  |  object  |    |
| AND  |  array  |    |
| entityAsyncStatus  |  object  |    |
| entityAsyncStatus_in  |  object  |    |
| entityAsyncStatus_in  |  array  |    |
| entityAsyncStatus_not  |  object  |    |
| entityAsyncStatus_not_in  |  object  |    |
| entityAsyncStatus_not_in  |  array  |    |
| global_default_action  |  object  |    |
| global_default_action_in  |  object  |    |
| global_default_action_in  |  array  |    |
| global_default_action_not  |  object  |    |
| global_default_action_not_in  |  object  |    |
| global_default_action_not_in  |  array  |    |
| id  |  string  |    |
| id_contains  |  string  |    |
| id_ends_with  |  string  |    |
| id_gt  |  string  |    |
| id_gte  |  string  |    |
| id_in  |  string  |    |
| id_in  |  array  |    |
| id_lt  |  string  |    |
| id_lte  |  string  |    |
| id_not  |  string  |    |
| id_not_contains  |  string  |    |
| id_not_ends_with  |  string  |    |
| id_not_in  |  string  |    |
| id_not_in  |  array  |    |
| id_not_starts_with  |  string  |    |
| id_starts_with  |  string  |    |
| installed  |  boolean  |    |
| installed_not  |  boolean  |    |
| name  |  string  |    |
| name_contains  |  string  |    |
| name_ends_with  |  string  |    |
| name_gt  |  string  |    |
| name_gte  |  string  |    |
| name_in  |  string  |    |
| name_in  |  array  |    |
| name_lt  |  string  |    |
| name_lte  |  string  |    |
| name_not  |  string  |    |
| name_not_contains  |  string  |    |
| name_not_ends_with  |  string  |    |
| name_not_in  |  string  |    |
| name_not_in  |  array  |    |
| name_not_starts_with  |  string  |    |
| name_starts_with  |  string  |    |
| NOT  |  object  |    |
| NOT  |  array  |    |
| OR  |  object  |    |
| OR  |  array  |    |
| phase  |  object  |    |
| phase_in  |  object  |    |
| phase_in  |  array  |    |
| phase_not  |  object  |    |
| phase_not_in  |  object  |    |
| phase_not_in  |  array  |    |
| version  |  string  |    |
| version_contains  |  string  |    |
| version_ends_with  |  string  |    |
| version_gt  |  string  |    |
| version_gte  |  string  |    |
| version_in  |  string  |    |
| version_in  |  array  |    |
| version_lt  |  string  |    |
| version_lte  |  string  |    |
| version_not  |  string  |    |
| version_not_contains  |  string  |    |
| version_not_ends_with  |  string  |    |
| version_not_in  |  string  |    |
| version_not_in  |  array  |    |
| version_not_starts_with  |  string  |    |
| version_starts_with  |  string  |    |